--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
     "development": {
         "username": "root",
-        "password": "1234",
+        "password": "kartik",
         "database": "namosri",
         "host": "localhost",
         "dialect": "mysql",
@@ -9,7 +9,7 @@
     },
     "production": {
         "username": "root",
-        "password": "1234",
+        "password": "kartik",
         "database": "namosri",
         "host": "localhost",
         "dialect": "mysql",
