--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "jade": "~1.11.0",
     "jsonwebtoken": "^8.3.0",
     "morgan": "~1.9.0",
+    "multer": "^1.3.1",
     "mysql2": "^1.6.1",
     "sequelize": "^4.38.1",
     "serve-favicon": "~2.4.5"
